@@ -5,13 +5,13 @@ import static by.tms.utils.RepositoryJdbcUtils.getProduct;
 import static by.tms.utils.RepositoryJdbcUtils.isEmpty;
 
 import by.tms.model.Product;
-import by.tms.repository.ConnectionPool;
 import by.tms.repository.ConnectionWrapper;
 import by.tms.repository.JdbcCartRepository;
 import java.sql.PreparedStatement;
 import java.sql.ResultSet;
 import java.util.ArrayList;
 import java.util.List;
+import java.util.stream.Collectors;
 import lombok.AllArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.apache.commons.lang3.tuple.ImmutablePair;
@@ -21,7 +21,6 @@ import org.apache.commons.lang3.tuple.Pair;
 @AllArgsConstructor
 public class JdbcCartRepositoryImpl implements JdbcCartRepository {
 
-    private ConnectionPool connectionPool;
     private static final String ADD_PRODUCT_TO_CART = "insert into carts (user_id, product_id, cart, favorite) VALUES (?, ?, ?, ?)";
     private static final String GET_CART_PRODUCTS_BY_USER_ID = "select p.id, p.name, p.price, p.type, p.info, c.count from carts c join products p on p.id = c.product_id where c.user_id=? and c.cart=true";
     private static final String GET_FAVORITE_PRODUCTS_BY_USER_ID = "select p.id, p.name, p.price, p.type, p.info, c.count from carts c join products p on p.id = c.product_id where c.user_id=? and c.favorite=true";
@@ -64,7 +63,7 @@ public class JdbcCartRepositoryImpl implements JdbcCartRepository {
     public List<Pair<Product, Integer>> getProductsFromCart(Long userId, boolean cart, boolean favorite) {
         List<Pair<Product, Integer>> products = new ArrayList<>();
         String query = cart ? GET_CART_PRODUCTS_BY_USER_ID : GET_FAVORITE_PRODUCTS_BY_USER_ID;
-        try (ConnectionWrapper connectionWrapper = connectionPool.getConnectionWrapper();
+        try (ConnectionWrapper connectionWrapper = CONNECTION_POOL.getConnectionWrapper();
                 PreparedStatement statement = connectionWrapper.getConnection().prepareStatement(query)) {
             statement.setLong(1, userId);
             ResultSet resultSet = statement.executeQuery();
@@ -74,7 +73,7 @@ public class JdbcCartRepositoryImpl implements JdbcCartRepository {
                 products.add(new ImmutablePair<>(product, count));
             }
         } catch (Exception e) {
-            log.error("Exception (getProductsFromCart()): " + e);
+            log.error("Exception (getProductsFromCart()): ", e);
         }
         return products;
     }
@@ -85,24 +84,10 @@ public class JdbcCartRepositoryImpl implements JdbcCartRepository {
         return isEmpty(productId, products);
     }
 
-    private void modifyProductCount(Long userId, Long productId, boolean up) {
-        Integer productCount = getCartProductCount(userId, productId);
-        productCount = getModifyCount(up, productCount);
-        try (ConnectionWrapper connectionWrapper = connectionPool.getConnectionWrapper();
-                PreparedStatement statement = connectionWrapper.getConnection().prepareStatement(UPDATE_CURRENT_PRODUCT_COUNT)) {
-            statement.setInt(1, productCount);
-            statement.setLong(2, userId);
-            statement.setLong(3, productId);
-            statement.executeUpdate();
-        } catch (Exception e) {
-            log.error("Exception (deleteProductCartCount()): " + e);
-        }
-    }
-
     @Override
     public Integer getCartProductCount(Long userId, Long productId) {
         int count = 0;
-        try (ConnectionWrapper connectionWrapper = connectionPool.getConnectionWrapper();
+        try (ConnectionWrapper connectionWrapper = CONNECTION_POOL.getConnectionWrapper();
                 PreparedStatement statement = connectionWrapper.getConnection().prepareStatement(GET_CURRENT_PRODUCT_COUNT)) {
             statement.setLong(1, userId);
             statement.setLong(2, productId);
@@ -111,19 +96,19 @@ public class JdbcCartRepositoryImpl implements JdbcCartRepository {
                 count = resultSet.getInt("count");
             }
         } catch (Exception e) {
-            log.error("Exception (getCartProductCount()): " + e);
+            log.error("Exception (getCartProductCount()): ", e);
         }
         return count;
     }
 
     @Override
     public void deleteCartProductsAfterBuy(Long userId) {
-        try (ConnectionWrapper connectionWrapper = connectionPool.getConnectionWrapper();
+        try (ConnectionWrapper connectionWrapper = CONNECTION_POOL.getConnectionWrapper();
                 PreparedStatement statement = connectionWrapper.getConnection().prepareStatement(DELETE_CART_PRODUCT_AFTER_BUY)) {
             statement.setLong(1, userId);
             statement.execute();
         } catch (Exception e) {
-            log.error("Exception (deleteCartProductsAfterBuy()): " + e);
+            log.error("Exception (deleteCartProductsAfterBuy()): ", e);
         }
     }
 
@@ -142,7 +127,7 @@ public class JdbcCartRepositoryImpl implements JdbcCartRepository {
     }
 
     private void addProductToCart(Long userId, Long productId, boolean cart, boolean favorite) {
-        try (ConnectionWrapper connectionWrapper = connectionPool.getConnectionWrapper();
+        try (ConnectionWrapper connectionWrapper = CONNECTION_POOL.getConnectionWrapper();
                 PreparedStatement statement = connectionWrapper.getConnection().prepareStatement(ADD_PRODUCT_TO_CART)) {
             statement.setLong(1, userId);
             statement.setLong(2, productId);
@@ -150,24 +135,38 @@ public class JdbcCartRepositoryImpl implements JdbcCartRepository {
             statement.setBoolean(4, favorite);
             statement.executeUpdate();
         } catch (Exception e) {
-            log.error("Exception (addProductToCart()): " + e);
+            log.error("Exception (addProductToCart()): ", e);
+        }
+    }
+
+    private void modifyProductCount(Long userId, Long productId, boolean up) {
+        Integer productCount = getCartProductCount(userId, productId);
+        productCount = getModifyCount(up, productCount);
+        try (ConnectionWrapper connectionWrapper = CONNECTION_POOL.getConnectionWrapper();
+                PreparedStatement statement = connectionWrapper.getConnection().prepareStatement(UPDATE_CURRENT_PRODUCT_COUNT)) {
+            statement.setInt(1, productCount);
+            statement.setLong(2, userId);
+            statement.setLong(3, productId);
+            statement.executeUpdate();
+        } catch (Exception e) {
+            log.error("Exception (deleteProductCartCount()): ", e);
         }
     }
 
     private List<Product> getProducts(Long userId, boolean cart, boolean favorite) {
         return getProductsFromCart(userId, cart, favorite).stream()
                                                           .map(Pair::getLeft)
-                                                          .toList();
+                                                          .collect(Collectors.toList());
     }
 
     private void deleteProductByMark(Long userId, Long productId, String query) {
-        try (ConnectionWrapper connectionWrapper = connectionPool.getConnectionWrapper();
+        try (ConnectionWrapper connectionWrapper = CONNECTION_POOL.getConnectionWrapper();
                 PreparedStatement statement = connectionWrapper.getConnection().prepareStatement(query)) {
             statement.setLong(1, userId);
             statement.setLong(2, productId);
             statement.execute();
         } catch (Exception e) {
-            log.error("Exception (deleteProductByMark()): " + e);
+            log.error("Exception (deleteProductByMark()): ", e);
         }
     }
 }
